active item in sidebar

--- a/web/client/app/Layout/Partial/Sidebar/sidebar-item.html
+++ b/web/client/app/Layout/Partial/Sidebar/sidebar-item.html
@@ -1,5 +1,5 @@
 <li role="presentation" data-ng-class="{ active: current }">
-    <a href="#/{{ url }}" data-uib-tooltip="{{ label | translate }}" data-tooltip-placement="right">
+    <a href="#{{ url }}" data-uib-tooltip="{{ label | translate }}" data-tooltip-placement="right">
         <span class="{{ icon }}"></span>
         <span class="sr-only">
             {{ label | translate }}
