fix sidebar animation

--- a/web/client/less/app/components/sidebar.less
+++ b/web/client/less/app/components/sidebar.less
@@ -58,6 +58,8 @@
         color: @sidebar-color;
         text-decoration: none;
 
+        .transition(@sidebar-transition);
+
         &:hover,
         &:focus {
             color: @sidebar-hover-color;
