--- a/web/client/less/app/variables.custom.less
+++ b/web/client/less/app/variables.custom.less
@@ -5,6 +5,7 @@
 @sidebar-active-color:       @brand-primary;
 @sidebar-padding-horizontal: 5px;
 @sidebar-padding-vertical:   floor(@grid-gutter-width / 2);
+@sidebar-transition: color .30s ease-in-out;
 
 // Default transition used across the application
 @transition-base: all .30s ease-in-out;
