--- a/web/client/app/Instrument/Partial/menu.html
+++ b/web/client/app/Instrument/Partial/menu.html
@@ -1,16 +1,16 @@
 <ul class="instrument-menu">
     <!-- Scale dropdown -->
     <li class="scale-dropdown" data-uib-dropdown="">
-        <a href="#" data-uib-dropdown-toggle="" role="button" aria-haspopup="true" aria-expanded="false">
+        <a href="#" data-uib-dropdown-toggle="" role="button">
             <span class="fa-stack">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="music-icon music-icon-tuning fa-stack-1x"></i>
+                <span class="fa fa-circle-thin fa-stack-2x"></span>
+                <span class="music-icon music-icon-tuning fa-stack-1x"></span>
             </span>
 
             <span class="caret"></span>
         </a>
 
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-check">
             <li class="active">
                 <a href="#" class="scale-link">
                     <span class="link-label">Standard</span>
@@ -64,7 +64,7 @@
             <span class="caret"></span>
         </a>
 
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-check">
             <li>
                 <a href="#" class="guitar-link">
                     <span class="link-label">Default</span>
