--- a/web/client/app/Layout/Partial/Header/navbar.html
+++ b/web/client/app/Layout/Partial/Header/navbar.html
@@ -16,7 +16,7 @@
             <instrument-menu class="nav navbar-nav"></instrument-menu>
 
             <ul class="nav navbar-nav">
-                <li class="nav-link-default" data-note-display-switch="" data-ng-class="{ 'active': noteDisplaySwitchCtrl.displayFlat }">
+                <li class="note-switch-display nav-link-default" data-note-display-switch="" data-ng-class="{ 'active': noteDisplaySwitchCtrl.displayFlat }">
                     <a href="" style="font-size: 28px;" data-ng-click="noteDisplaySwitchCtrl.switchDisplay()">
                         &#9837;
                     </a>
