--- a/web/client/app/Layout/Partial/list-sorter.html
+++ b/web/client/app/Layout/Partial/list-sorter.html
@@ -1,4 +1,4 @@
-<div class="list-sort-by" data-uib-dropdown="" data-ng-show="0 !== listSorterCtrl.count">
+<div class="list-sorter" data-uib-dropdown="" data-ng-show="0 !== listSorterCtrl.count">
     <!-- Information about the list -->
     <b>{{ listSorterCtrl.count }}</b>
     <span data-translate="song"
@@ -6,11 +6,12 @@
           data-translate-interpolation="messageformat"></span>, sorted by
 
     <!-- Choose field for sort by -->
-    <a href id="list-sort-by-dropdown" data-uib-dropdown-toggle="">
+    <a href id="list-sorter-dropdown" data-uib-dropdown-toggle="">
         {{ listSorterCtrl.current }}
         <span class="caret"></span>
     </a>
-    <ul class="uib-dropdown-menu dropdown-menu-right" aria-labelledby="simple-dropdown">
+
+    <ul class="uib-dropdown-menu dropdown-menu-check dropdown-menu-right" aria-labelledby="list-sorter-dropdown">
         <li data-ng-repeat="(field, type) in listSorterCtrl.fields" data-ng-class="{ 'active': field === listSorterCtrl.current }">
             <a href="" role="button" data-ng-click="listSorterCtrl.setCurrent(field)">
                 {{ field }}
