--- a/web/client/less/app/components/header.less
+++ b/web/client/less/app/components/header.less
@@ -1,3 +1,6 @@
+/**
+ * Contains UserMenu, InstrumentMenu, SwitchDisplayNote
+ */
 .header {
     z-index: 3;
     .box-shadow(none);
@@ -7,5 +10,115 @@
         width: @sidebar-width;
         background-color: @navbar-default-link-active-bg;
         text-align: center;
+    }
+
+    .nav {
+        .dropdown-toggle {
+            padding-top: 14px;
+            padding-bottom: 14px;
+        }
+    }
+
+    .note-switch-display {
+        position: relative;
+        padding-right: 5px;
+        padding-left: 3px;
+
+
+        &:after {
+            border: 1px solid #202020;
+            bottom: 10px;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
+            content: " ";
+            display: block;
+            position: absolute;
+            top: 10px;
+            right: 0;
+        }
+    }
+}
+
+/**
+ * Header buttons declared by the current page
+ */
+.page-buttons {
+    position: fixed;
+    right: floor(@grid-gutter-width / 2);
+    top: 0;
+    z-index: 4;
+    padding: 0 5px;
+
+    .divider {
+        left: 0;
+        border: 1px solid #202020;
+        bottom: 10px;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
+        content: " ";
+        display: block;
+        position: relative;
+        top: 10px;
+        margin: 0 3px;
+        height: @navbar-height - 20px;
+    }
+
+    &:before,
+    &:after {
+        display: block;
+        content: " ";
+        position: absolute;
+        top: 10px;
+        bottom: 10px;
+        border: 1px solid @dropdown-bg;
+        .box-shadow(0 0 3px rgba(0, 0, 0, 0.75));
+    }
+
+    &:before {
+        left: 0;
+    }
+
+    &:after {
+        right: 0;
+    }
+}
+
+.header .nav,
+.page-buttons {
+    .dropdown-toggle {
+        height: @navbar-height;
+        text-align: center;
+
+        border-left:  2px solid transparent;
+        border-right: 2px solid transparent;
+
+        > .fa {
+            vertical-align: middle;
+        }
+
+        > .fa-stack {
+            display: block;
+        }
+
+        .caret {
+            vertical-align: top;
+            margin-left: 0;
+        }
+    }
+
+    .dropdown {
+        &.open {
+            .dropdown-toggle {
+                background: @dropdown-bg !important;
+                border-left:  2px solid rgba(0, 0, 0, 0.4);
+                border-right: 2px solid rgba(0, 0, 0, 0.4);
+            }
+        }
+    }
+
+    .dropdown-menu:not(.dropdown-menu-right) {
+        left: 1px;
+    }
+
+    .dropdown-menu-right {
+        right: 1px;
     }
 }
