--- a/web/client/less/app/components/list.less
+++ b/web/client/less/app/components/list.less
@@ -1,4 +1,4 @@
-.list-sort-by {
+.list-sorter {
     position: absolute;
     right: 0;
     bottom: 0;
@@ -19,6 +19,27 @@
         &:hover, &:focus {
             color: @brand-primary;
         }
+    }
+}
+
+.list-formatter {
+    /* the wrap <div> break the default Bootstrap nav-link styles, so lets recreate it */
+    > a {
+        position: relative;
+        display: block;
+        padding: @navbar-padding-vertical @navbar-padding-horizontal;
+        line-height: @line-height-computed;
+        color: @navbar-default-link-color;
+
+        &:hover,
+        &:focus {
+            color: @navbar-default-link-hover-color;
+            background-color: @navbar-default-link-hover-bg;
+        }
+    }
+
+    .dropdown-menu {
+        margin: 0;
     }
 }
 
