--- a/web/client/app/Layout/Partial/list-formatter.html
+++ b/web/client/app/Layout/Partial/list-formatter.html
@@ -1,27 +1,29 @@
 <div class="list-formatter" data-uib-dropdown="">
     <a href="#" id="list-formatter-dropdown" data-uib-dropdown-toggle="" role="button">
-        <span class="fa fa-th"></span>
+        <span class="fa" data-ng-class="{ 'fa-th': 'tile' === listFormatterCtrl.format, 'fa-th-list': 'detailed' === listFormatterCtrl.format, 'fa-list': 'condensed' === listFormatterCtrl.format }"></span>
     </a>
 
     <ul class="dropdown-menu dropdown-menu-check dropdown-menu-right" aria-labelledby="list-formatter-dropdown">
-        <li>
-            <a href="">
+        <li data-ng-class="{ active: 'tile' === listFormatterCtrl.format }">
+            <a href="" role="button" data-ng-click="listFormatterCtrl.switchFormat('tile')">
                 <span class="fa fa-fw fa-th"></span>
                 {{ 'list_display_tile'|translate }}
 
                 <span class="fa fa-check"></span>
             </a>
         </li>
-        <li class="active">
-            <a href="">
+
+        <li data-ng-class="{ active: 'detailed' === listFormatterCtrl.format }">
+            <a href="" role="button" data-ng-click="listFormatterCtrl.switchFormat('detailed')">
                 <span class="fa fa-fw fa-th-list"></span>
                 {{ 'list_display_list_detailed'|translate }}
 
                 <span class="fa fa-check"></span>
             </a>
         </li>
-        <li>
-            <a href="">
+
+        <li data-ng-class="{ active: 'condensed' === listFormatterCtrl.format }">
+            <a href="" role="button" data-ng-click="listFormatterCtrl.switchFormat('condensed')">
                 <span class="fa fa-fw fa-list"></span>
                 {{ 'list_display_list_condensed'|translate }}
 
