--- a/web/client/app/Theory/Partial/summary.html
+++ b/web/client/app/Theory/Partial/summary.html
@@ -4,9 +4,15 @@
         Theory <small>Summary</small>
     </layout-page-title>
 
-    <ul>
-        <li><a href="#/theory/intervals">List of intervals</a></li>
-        <li><a href="#/theory/notes">Notes reference</a></li>
-        <li><a href="#/theory/chords">Chords reference</a></li>
-    </ul>
+    <div class="list-group">
+        <a class="list-group-item" href="#/theory/intervals">Intervals</a>
+
+        <a class="list-group-item" href="#/theory/notes">Notes</a>
+
+        <a class="list-group-item" href="#/theory/degrees">Degrees</a>
+
+        <a class="list-group-item" href="#/theory/chords">Chords</a>
+
+        <a class="list-group-item" href="#/theory/scales">Scales</a>
+    </div>
 </layout-page>
