--- a/web/client/app/User/Partial/settings.html
+++ b/web/client/app/User/Partial/settings.html
@@ -34,6 +34,14 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="" class="control-label">Notes name (Anglo-Saxon / Latin)</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="" class="control-label">Semitome or Whole tone</label>
+                </div>
+
+                <div class="form-group">
                     <label for="" class="control-label">Display Interval (semitones / name / symbol)</label>
                 </div>
 
