--- a/web/client/app/SongBook/Partial/List/item-condensed.html
+++ b/web/client/app/SongBook/Partial/List/item-condensed.html
@@ -1,18 +1,18 @@
-<div class="song-item song-item-condensed panel panel-default">
+<div class="list-item list-item-condensed panel panel-default">
     <!-- Image -->
     <div class="song-cover">
         <img class="" data-ng-src="{{ entity.cover.path ? (entity.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" />
     </div>
 
     <!-- Info -->
-    <div class="song-info panel-body">
+    <div class="item-info song-info panel-body">
         {{ entity.title }}
         <small data-ng-if="null !== entity.artist">{{ entity.artist }}</small>
     </div>
 
     <!-- Item buttons -->
-    <div class="song-item-btn-group">
-        <a class="btn btn-danger" href="" data-ng-click="songListCtrl.removeSong(entity)">
+    <div class="list-item-btn-group">
+        <a class="btn btn-danger" href="" data-ng-click="songListCtrl.remove(entity)">
             <span class="fa fa-trash-o"></span>
             <span class="sr-only">{{ 'delete_song'|translate }}</span>
         </a>
