--- a/web/client/app/SongBook/Partial/index.html
+++ b/web/client/app/SongBook/Partial/index.html
@@ -1,4 +1,4 @@
-<layout-page class="song-list">
+<layout-page class="page-list song-list">
     <!-- Header buttons -->
     <layout-page-buttons>
         <!-- New Song button -->
@@ -31,7 +31,6 @@
              data-ng-class="{ 'col-md-12': 'tile' !== songListCtrl.format, 'col-xs-12 col-sm-4 col-md-3 col-lg-2': 'tile' === songListCtrl.format }"
         ></div>
     </div>
-
 
     <!-- No element message -->
     <div class="empty-list" data-ng-if="songListCtrl.entities.length === 0">
