--- a/web/client/less/app/boilerplate.less
+++ b/web/client/less/app/boilerplate.less
@@ -1,3 +1,7 @@
+[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak {
+    display: none;
+}
+
 .form-last, .panel-last {
     margin-bottom: 0 !important;
 }
