--- a/web/client/less/app/modules/SongBook/list.less
+++ b/web/client/less/app/modules/SongBook/list.less
@@ -2,10 +2,8 @@
  * List of Songs
  */
 .song-list {
-    .song-item {
-        position: relative; // Lock `absolute` buttons in its item
-
-        &.song-item-condensed {
+    .list-item {
+        &.list-item-condensed {
             display: table;
             vertical-align: middle;
             width: 100%;
@@ -24,139 +22,7 @@
                     height: auto;
                 }
             }
-
-            .song-info {
-                color: @brand-primary;
-                font-size: @font-size-large;
-                font-variant: small-caps;
-                margin: 0;
-
-                small {
-                    color: @gray-light;
-                    font-variant: normal;
-                    font-size: 80%;
-                }
-            }
-
-            .song-item-btn-group {
-                position: absolute;
-                top: 50%;
-                transform: translate(0, -50%) !important;
-            }
-        }
-
-        &.song-item-tile {
-            .song-info {
-                margin: 0;
-                color: @brand-primary;
-                font-size: @font-size-large;
-                font-variant: small-caps;
-
-                small {
-                    color: @gray-light;
-                    font-variant: normal;
-                    font-size: 80%;
-                    display: block;
-                }
-            }
-        }
-
-        &.song-item-detailed {
-            .song-info {
-                padding-bottom: 36px; // Add a taller padding to have place for the `absolute` buttons
-            }
-
-            .song-item-btn-group {
-                bottom: 0;
-                position: absolute;
-            }
-        }
-
-        .song-item-btn-group {
-            right: 0;
-            font-size: 0; // Remove the horizontal white-space between inline elements
-
-            .btn {
-                .list-button-variant(@btn-default-bg);
-            }
-
-            .btn-danger {
-                .list-button-variant(@btn-danger-bg);
-            }
         }
     }
 }
 
-.list-button-variant(@background-color) {
-    font-size: @font-size-base;
-    position: relative;
-    margin-right: 28px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border: none;
-
-    &:before {
-        content: " ";
-        position: absolute;
-        width: 0;
-        height: 0;
-        left: -24px;
-        top: 0;
-        border-style: solid;
-        border-width: 0 0 36px 24px;
-        border-color: transparent transparent @background-color transparent;
-        -webkit-transform: rotate(360deg);
-    }
-
-    &:after {
-        content: " ";
-        position: absolute;
-        width: 0;
-        height: 0;
-        right: -24px;
-        top: 0;
-        border-style: solid;
-        border-width: 36px 24px 0 0;
-        border-color: @background-color transparent transparent transparent;
-        -webkit-transform: rotate(360deg);
-    }
-
-    // Mimic Bootstrap buttons color changes on button states
-    &:hover,
-    &:focus,
-    &.focus,
-    &:active,
-    &.active {
-        &:before {
-            border-color: transparent transparent darken(@background-color, 10%) transparent;
-        }
-
-        &:after {
-            border-color: darken(@background-color, 10%) transparent transparent transparent;
-        }
-    }
-
-    &:active,
-    &.active {
-        &:hover,
-        &:focus,
-        &.focus {
-            &:before {
-                border-color: transparent transparent darken(@background-color, 17%) transparent;
-            }
-
-            &:after {
-                border-color: darken(@background-color, 17%) transparent transparent transparent;
-            }
-        }
-    }
-
-    &:last-child {
-        margin-right: 0;
-        padding-right: 14px;
-
-        &:after {
-            border: none;
-        }
-    }
-}
