little fixes and improvements

--- a/web/client/app/Layout/Partial/list-sorter.html
+++ b/web/client/app/Layout/Partial/list-sorter.html
@@ -1,7 +1,7 @@
 <div class="list-sorter" data-uib-dropdown="" data-ng-show="0 !== listSorterCtrl.count">
     <!-- Information about the list -->
     <b>{{ listSorterCtrl.count }}</b>
-    <span data-translate="song"
+    <span data-translate="{{ listSorterCtrl.element }}"
           data-translate-values="{ COUNT: listSorterCtrl.count }"
           data-translate-interpolation="messageformat"></span>, sorted by
 
