--- a/web/client/app/SongBook/Partial/index.html
+++ b/web/client/app/SongBook/Partial/index.html
@@ -21,7 +21,7 @@
     <layout-page-title id="song-list">
         {{ 'my_songbook_title'|translate }}
 
-        <layout-list-sorter data-count="songListCtrl.entities.length" data-current="songListCtrl.sortBy" data-reverse="songListCtrl.sortReverse" data-fields="songListCtrl.sortFields"></layout-list-sorter>
+        <layout-list-sorter data-element="song" data-count="songListCtrl.entities.length" data-current="songListCtrl.sortBy" data-reverse="songListCtrl.sortReverse" data-fields="songListCtrl.sortFields"></layout-list-sorter>
     </layout-page-title>
 
     <div class="row">
