--- a/web/client/app/Theory/Partial/Chord/List/item-condensed.html
+++ b/web/client/app/Theory/Partial/Chord/List/item-condensed.html
@@ -9,7 +9,7 @@
 
     <!-- Item buttons -->
     <div class="list-item-btn-group">
-        <a class="btn btn-default" href="#/chords/{{ entity.id }}">
+        <a class="btn btn-default" href="#/theory/chords/{{ entity.id }}">
             <span class="fa fa-eye"></span>
             <span class="sr-only">{{ 'show_chord'|translate }}</span>
         </a>
