--- a/web/client/app/Theory/Partial/Chord/List/item-detailed.html
+++ b/web/client/app/Theory/Partial/Chord/List/item-detailed.html
@@ -1,6 +1,6 @@
 <div class="list-item list-item-detailed panel panel-default">
         <!-- Info -->
-        <div class="panel-body">
+        <div class="item-info panel-body">
             <h2 class="page-header">
                 {{ entity.name }}
                 <small data-translate="note_count"
@@ -11,7 +11,7 @@
 
         <!-- Item buttons -->
         <div class="list-item-btn-group">
-            <a class="btn btn-default" href="#/chords/{{ entity.id }}">
+            <a class="btn btn-default" href="#/theory/chords/{{ entity.id }}">
                 <span class="fa fa-eye"></span>
                 <span class="sr-only">{{ 'show_chord'|translate }}</span>
             </a>
