--- a/web/client/app/Theory/Partial/Chord/index.html
+++ b/web/client/app/Theory/Partial/Chord/index.html
@@ -11,7 +11,7 @@
     <layout-page-title>
         Theory <small>Chords</small>
 
-        <layout-list-sorter data-count="chordListCtrl.entities.length" data-current="chordListCtrl.sortBy" data-reverse="chordListCtrl.sortReverse" data-fields="chordListCtrl.sortFields"></layout-list-sorter>
+        <layout-list-sorter data-element="chord" data-count="chordListCtrl.entities.length" data-current="chordListCtrl.sortBy" data-reverse="chordListCtrl.sortReverse" data-fields="chordListCtrl.sortFields"></layout-list-sorter>
     </layout-page-title>
 
     <div class="row">
