--- a/web/client/less/app/components/list.less
+++ b/web/client/less/app/components/list.less
@@ -49,6 +49,12 @@
         position: relative; // Lock `absolute` buttons in its item
 
         &.list-item-detailed {
+            .item-info {
+                small {
+                    display: block;
+                }
+            }
+
             .list-item-btn-group {
                 position: absolute;
                 bottom: 0;
