--- a/web/client/app/SongBook/Partial/List/item-detailed.html
+++ b/web/client/app/SongBook/Partial/List/item-detailed.html
@@ -6,7 +6,7 @@
         </div>
 
         <!-- Info -->
-        <div class="song-info col-lg-10 col-md-10 col-sm-10 col-xs-9 panel-body">
+        <div class="song-info item-info col-lg-10 col-md-10 col-sm-10 col-xs-9 panel-body">
             <h2 class="page-header">
                 {{ entity.title }}
                 <small data-ng-if="null !== entity.artist">{{ entity.artist }}</small>
