--- a/web/client/app/SongBook/Partial/index.html
+++ b/web/client/app/SongBook/Partial/index.html
@@ -12,7 +12,7 @@
         <li class="divider"></li>
 
         <!-- List format button -->
-        <layout-page-button class="nav-link-default" data-uib-dropdown="">
+        <layout-page-button class="nav-link-default">
             <layout-list-formatter data-format="songListCtrl.format"></layout-list-formatter>
         </layout-page-button>
     </layout-page-buttons>
