--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -12,6 +12,9 @@
 // Loading bar
 @import "@{lib-path}/angular-loading-bar/build/loading-bar.css";
 
+// AlphaTab
+@import "@{lib-path}/AlphaTab/Build/JavaScript/AlphaTab.css";
+
 // Variables (override bootstrap default)
 @import "variables";
 @import "variables.custom.less";
@@ -43,5 +46,6 @@
 @import "bundles/advertisement.less";
 
 // Modules styles
+@import "modules/SheetMusic/module.less";
 @import "modules/SongBook/module.less";
 @import "modules/Theory/module.less";
