--- a/web/client/less/app/modules/Theory/module.less
+++ b/web/client/less/app/modules/Theory/module.less
@@ -2,6 +2,8 @@
  * Theory module styles
  */
 
+@import "Note/selector";
+@import "Note/menu";
 @import "note";
 @import "interval";
 @import "chord";
