--- a/web/client/app/Theory/Partial/Chord/List/item-detailed.html
+++ b/web/client/app/Theory/Partial/Chord/List/item-detailed.html
@@ -1,20 +1,22 @@
 <div class="list-item list-item-detailed panel panel-default">
-        <!-- Info -->
-        <div class="item-info panel-body">
-            <h2 class="page-header">
-                {{ entity.name }}
-                <small data-translate="note_count"
-                       data-translate-values="{ COUNT: entity.notes_count }"
-                       data-translate-interpolation="messageformat"></small>
-            </h2>
-        </div>
+    <!-- Info -->
+    <div class="item-info panel-body">
+        <chord-sheet class="pull-left" data-root="chordListCtrl.root" data-chord="entity"></chord-sheet>
 
-        <!-- Item buttons -->
-        <div class="list-item-btn-group">
-            <a class="btn btn-default" href="#/theory/chords/{{ entity.id }}">
-                <span class="fa fa-eye"></span>
-                <span class="sr-only">{{ 'show_chord'|translate }}</span>
-            </a>
-        </div>
+        <h2 class="page-header">
+            {{ chordListCtrl.root.info.name }}
+            {{ entity.name }}
+            <small data-translate="note_count"
+                   data-translate-values="{ COUNT: entity.notes_count }"
+                   data-translate-interpolation="messageformat"></small>
+        </h2>
+    </div>
+
+    <!-- Item buttons -->
+    <div class="list-item-btn-group">
+        <a class="btn btn-default" href="#/theory/chords/{{ entity.id }}">
+            <span class="fa fa-eye"></span>
+            <span class="sr-only">{{ 'show_chord'|translate }}</span>
+        </a>
     </div>
 </div>
