--- a/web/client/app/Theory/Partial/Chord/List/item-tile.html
+++ b/web/client/app/Theory/Partial/Chord/List/item-tile.html
@@ -1,4 +1,4 @@
-<div class="list-item list-item-tile panel panel-default" style="margin-bottom: 30px;">
+<div class="list-item list-item-tile panel panel-default">
     <!-- Info -->
     <div class="item-info panel-body">
         {{ entity.name }}
