--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -42,10 +42,10 @@
 @import "bundles/guitar.less";
 @import "bundles/guitar_neck.less";
 @import "bundles/user.less";
-@import "bundles/sheet_music.less";
 @import "bundles/advertisement.less";
 
 // Modules styles
 @import "modules/SheetMusic/module.less";
+@import "modules/Instrument/module.less";
 @import "modules/SongBook/module.less";
 @import "modules/Theory/module.less";
