--- a/web/client/less/app/components/list.less
+++ b/web/client/less/app/components/list.less
@@ -64,6 +64,8 @@
         }
 
         &.list-item-tile {
+            margin-bottom: @grid-gutter-width;
+
             .item-info {
                 margin: 0;
                 color: @brand-primary;
