--- a/web/client/app/Form/Partial/form.html
+++ b/web/client/app/Form/Partial/form.html
@@ -8,7 +8,7 @@
 
     <form-errors data-form-def="formComponentCtrl.formDef"></form-errors>
 
-    <!-- Add method in hidden field form HTTP methods which are not supported by HTML -->
+    <!-- Add method in hidden field for HTTP methods which are not supported by HTML -->
     <input type="hidden" name="_method" value="{{ formComponentCtrl.formDef.vars.method }}" />
 
     <div data-ng-transclude=""></div>
