--- a/web/client/app/SongBook/Partial/List/item-tile.html
+++ b/web/client/app/SongBook/Partial/List/item-tile.html
@@ -1,4 +1,4 @@
-<div class="list-item list-item-tile panel panel-default" style="margin-bottom: 30px;">
+<div class="list-item list-item-tile panel panel-default">
     <!-- Image -->
     <div class="song-cover">
         <img class="img-responsive" data-ng-src="{{ entity.cover.path ? (entity.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" />
